--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Escola de Xadrez</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
